--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -36,7 +36,7 @@ a:link, a:visited, a:active {
 /*nav bar*/
 .nav{
     display: flex;
-    justify-content: space-evenly;
+    align-items: center;
     
 }
 li{
@@ -49,7 +49,7 @@ p{
     font-size: 1.5rem;
     font-weight: 500;
     cursor: pointer;
-    margin-left: -5rem;
+    
 }
 .head{
     display: flex;
