--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -34,8 +34,17 @@ a:link, a:visited, a:active {
 }
 
 
+.item{
+    border: 2px solid black;
+    border-radius: 2px;
+    width: 20rem;
+    height: 20rem;
+    
+}
 
-/* .containerItem{
-  
+.img{
+  width: 10rem;
+  height: 10rem;
+}
 
-} */
+
