--- a/src/components/Detail/ItemDetail.css
+++ b/src/components/Detail/ItemDetail.css
@@ -39,7 +39,7 @@ a:link, a:visited, a:active {
     margin-top: 1rem;
 }
 
-.img{
+.imgDetail{
   width: 30rem;
   height: 30rem;
   border: 2px solid black;
